# lightdm-qt5-greeter-ccs-api

./: CMakeLists.txt  README.md  ccs_contest_watcher.cpp  ccs_contest_watcher.h  downloader.cpp  downloader.h  license-header.txt  lightdm-qt5-greeter.conf  lightdm-qt5-greeter.desktop  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h
.github/workflows/: build.yml
translations/: lightdm-qt5-greeter_en.ts  lightdm-qt5-greeter_hu.ts
